refactor: new response struct
