# docs/swagger.json
@@ -455,7 +455,7 @@
                 "tags": [
                     "token FT"
                 ],
-                "summary": "查询某人持有的某FT Token的余额",
+                "summary": "查询某人持有的某FT Token的余额，同时返回UTXO数量",
                 "parameters": [
                     {
                         "type": "string",
@@ -494,7 +494,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.FTOwnerBalanceResp"
+                                            "$ref": "#/definitions/model.FTOwnerBalanceWithUtxoCountResp"
                                         }
                                     }
                                 }
@@ -2483,7 +2483,7 @@
                     "description": "address",
                     "type": "string"
                 },
-                "pending_satoshi": {
+                "pendingSatoshi": {
                     "description": "待确认余额satoshi",
                     "type": "integer"
                 },
@@ -2681,8 +2681,29 @@
                     "description": "余额",
                     "type": "integer"
                 },
-                "pending_balance": {
+                "pendingBalance": {
                     "description": "待确认余额",
+                    "type": "integer"
+                }
+            }
+        },
+        "model.FTOwnerBalanceWithUtxoCountResp": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "description": "token持有人的address",
+                    "type": "string"
+                },
+                "balance": {
+                    "description": "余额",
+                    "type": "integer"
+                },
+                "pendingBalance": {
+                    "description": "待确认余额",
+                    "type": "integer"
+                },
+                "utxoCount": {
+                    "description": "UTXO 数量",
                     "type": "integer"
                 }
             }
@@ -2702,7 +2723,7 @@
                     "description": "FT合约的genesis，Hex编码",
                     "type": "string"
                 },
-                "pending_balance": {
+                "pendingBalance": {
                     "description": "待确认余额",
                     "type": "integer"
                 },
@@ -2783,7 +2804,7 @@
                     "description": "持有的当前NFT个数",
                     "type": "integer"
                 },
-                "pending_count": {
+                "pendingCount": {
                     "description": "待确认的当前NFT个数",
                     "type": "integer"
                 }
@@ -2804,7 +2825,7 @@
                     "description": "NFT合约的genesis，Hex编码",
                     "type": "string"
                 },
-                "pending_count": {
+                "pendingCount": {
                     "description": "待确认的当前NFT个数",
                     "type": "integer"
                 },
